# NinjaFrog

./: CMakeLists.txt  README.md
data/Config/: UILevelSelector_config.txt  UIMenu_config.txt  checkPoint_config.txt  collectables_config.txt  endPoint_config.txt  enemy_fire_config.txt  enemy_saw_config.txt  enemy_spike_config.txt  game_config.txt  levels_config.txt  player_config.txt
data/Levels/: Enemys2.tsx  Level00.tmx  Level01.tmx  Level02.tmx  Level03.tmx  Level04.tmx  Level05.tmx
data/Levels/images/Keys/: wasd.tsx
data/Levels/images/tilemap/: Enemys.tsx  fruits.tsx  tileMap.tsx  tilesetx2.tsx
data/Saves/: gameSave.txt
data/Sound/: SoundEffectsList.txt  SoundList.txt
include/Core/: AssetManager.h  AudioManager.h  CollectableManager.h  ConfigLoader.h  EnemyManager.h  Game.h  Level.h  World.h
include/Gameplay/: Collectable.h  Enemy.h  Entity.h  Fire.h  GameObject.h  Player.h  Saw.h  Spike.h
include/UI/: UIButton.h  UIHud.h  UILevelCompleted.h  UILevelSelector.h  UIManager.h  UIMenu.h  UIPauseScreen.h  UIScreeen.h  UIScreenMainMenu.h
include/Utils/: Constants.h
src/: main.cpp
src/Core/: AssetManager.cpp  AudioManager.cpp  CollectableManager.cpp  ConfigLoader.cpp  EnemyManager.cpp  Game.cpp  Level.cpp  World.cpp
src/Gameplay/: Enemy.cpp  Entity.cpp  Fire.cpp  Player.cpp  Saw.cpp  Spike.cpp
src/UI/: UIButton.cpp  UIHud.cpp  UILevelCompleted.cpp  UILevelSelector.cpp  UIManager.cpp  UIMenu.cpp  UIPauseScreen.cpp  UIScreenMainMenu.cpp
